syntax = "proto3";

option java_multiple_files = true;
option java_package = "ronan_hanley.dist_sys.user_account_service.proto";
option java_outer_classname = "PasswordServiceProto";

service PasswordService {
  rpc Hash (HashRequest) returns (HashResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message HashPair {
  bytes hash = 1;
  bytes salt = 2;
}

message HashRequest {
  int32 userId = 1;
  string password = 2;
}

message HashResponse {
  int32 userId = 1;
  HashPair hashPair = 2;
}

message ValidateRequest {
  string password = 1;
  HashPair hashPair = 2;
}

message ValidateResponse {
  bool valid = 1;
}
